--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a:hover {
 .name {
     font-size: 180%;
     font-weight: bolder;
-    font-family: 'Fredoka One', cursive;
+    font-family: 'Roboto', sans-serif;
 }
 
 footer {
@@ -60,14 +60,14 @@ footer > p {
 
 .main {
     background-color: #F1F3F4;
+    font-family: 'Roboto', sans-serif;
 }
 
-.main .p-welcome {
+.main .p-beathistory {
     height: 100%;
     margin-top: 20px;
     justify-content: center;
     text-align: center;
-    font-family: 'Roboto', sans-serif
 }
 
 .main h2 {
@@ -75,10 +75,20 @@ footer > p {
     margin-bottom: 30px;
 }
 
+.main .p-beathistory p {
+    width: 930px;
+}
+
+.main .p-beathistory img {
+    width: 350px;
+    height: 200px;
+}
+
 /* BEATS */
 
 .beats {
     background-color: #F1F3F4;
+    font-family: 'Roboto', sans-serif;
 }
 
 .beats .wrapper {
@@ -115,7 +125,6 @@ footer > p {
 }
 
 .beats .genre {
-    font-family: 'Roboto', sans-serif;
     font-size: large;
     color: #000;
 }
@@ -131,7 +140,7 @@ footer > p {
 }
 
 .transform{
-   transition: all .2s ease-out;
+   transition: all .5s ease-out;
 }
 
 .transform:hover{
@@ -142,6 +151,7 @@ footer > p {
 
 .faq {
     background-color: #F1F3F4;
+    font-family: 'Roboto', sans-serif;
 }
 
 .faq .p-faq {
@@ -149,7 +159,6 @@ footer > p {
     margin-top: 20px;
     justify-content: center;
     text-align: center;
-    font-family: 'Roboto', sans-serif
 }
 
 .faq h2 {
@@ -161,6 +170,7 @@ footer > p {
 
 .aboutus {
     background-color: #F1F3F4;
+    font-family: 'Roboto', sans-serif;
 }
 
 .aboutus .p-aboutus {
@@ -169,7 +179,6 @@ footer > p {
     margin-top: 20px;
     justify-content: center;
     text-align: center;
-    font-family: 'Roboto', sans-serif
 }
 
 .aboutus h2 {
@@ -185,6 +194,7 @@ footer > p {
 
 .login {
     background-color: #f4f1f4;
+    font-family: 'Roboto', sans-serif;
 }
 
 .login .overlay {
@@ -192,8 +202,6 @@ footer > p {
     width: 50%;    
     justify-content: space-around;
     text-align: center;
-    font-family: 'Roboto', sans-serif
-    
 }
 
 .register:after {
