--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@ navbar img:hover {
     box-shadow: 0 8px 6px -6px #f1f3f4;
 }
 
+.metronome  {    
+    background: #fba90f;
+    padding: 8px 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    margin: auto;
+    font-size: 18px;
+    transition-property: background-color;
+    transition-duration: 650ms;
+    box-shadow: 0 8px 6px -6px #000000;
+}
+
 a {
     width: 100%;
     background: #fba90f;
@@ -121,7 +133,7 @@ footer > p {
 .main .p-beathistory h2 {
     margin-top: 50px;
     margin-bottom: 50px;
-    color: #000000;
+    color: #2D2926FF;
     font-size: 2rem;
     letter-spacing: 2px;
 }
@@ -129,6 +141,7 @@ footer > p {
 .main .p-beathistory p {
     background:#9BFFF9;
     width: 55%;
+    color: #2D2926FF;
     font-size: 17px;    
     margin: 0 auto;
     line-height: 1.6;
@@ -272,6 +285,7 @@ footer > p {
 .faq .p-faq p {
     background:#9BFFF9;
     width: 55%;
+    color: #2D2926FF;
     font-size: 17px;    
     margin: 50px auto;
     line-height: 1.6;
@@ -286,7 +300,7 @@ footer > p {
 .faq h2 {
     margin-top: 50px;
     margin-bottom: 50px;
-    color: #000000;
+    color: #2D2926FF;
     font-size: 2rem;
     letter-spacing: 2px;
 }
@@ -314,6 +328,7 @@ footer > p {
 .aboutus .p-aboutus p {
     background:#9BFFF9;
     width: 55%;
+    color: #2D2926FF;
     font-size: 17px;    
     margin: 50px auto;
     line-height: 1.6;
@@ -328,7 +343,7 @@ footer > p {
 .aboutus h2 {
     margin-top: 50px;
     margin-bottom: 50px;
-    color: #000000;
+    color: #2D2926FF;
     font-size: 2rem;
     letter-spacing: 2px;
 }
@@ -407,11 +422,13 @@ input {
 .login h3 {
     font-size: 1.5rem;
     letter-spacing: 1px;
+    color: #2D2926FF;
 }
 
 .login h4 {
     font-size: 1.2rem;
     letter-spacing: 1px;
+    color: #2D2926FF;
 }
 
 @media (max-width: 950px) {
